--- a/gramex.yaml
+++ b/gramex.yaml
@@ -23,7 +23,9 @@ url:
     pattern: /$YAMLURL/data
     handler: FormHandler
     kwargs:
-      url: $YAMLPATH/MostCrimeinEachPrecinct.csv
+      url: sqlite:///$YAMLPATH/sample.db
+      table: test
+      query: "select a. b from test where a > 10"
 
   myfirstapp-login:
     pattern: /$YAMLURL/login/
