--- a/gramex.yaml
+++ b/gramex.yaml
@@ -23,10 +23,16 @@ url:
     pattern: /$YAMLURL/data
     handler: FormHandler
     kwargs:
-      url: sqlite:///$YAMLPATH/sample.db
-      table: test
-      query: "select a. b from test where a > 10"
-
+      url: $YAMLPATH/MostCrimeinEachPrecinct.csv
+      # table: test
+      # query: "select a. b from test where a > 10"
+  TopCrimeYTD-data:
+    pattern: /$YAMLURL/TopCrimeYTD
+    handler: FormHandler
+    kwargs:
+      url: sqlite:///$YAMLPATH/save_pandas.db
+      table: TopCrimes
+      modify: data.topCrimeYTD(data, handler)
   myfirstapp-login:
     pattern: /$YAMLURL/login/
     # You MUST change the auth before deploying. DBAuth is commonly used.
@@ -86,4 +92,3 @@ handlers:
       403: {path: $YAMLPATH/error/403.html}     # Forbidden: user does not have access
       404: {path: $YAMLPATH/error/404.html}     # File not found
       500: {path: $YAMLPATH/error/500.html}     # Internal server error
-
